refactor: Update project name and metadata
Rename the project from "Typ-Affe: German Typing Practice" to "Typ-Affe: German Typing Test" to better reflect its purpose. This includes updating the `package.json` name and the `metadata.json` fields.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typ-affe:-german-typing-practice",
+  "name": "typ-affe:-german-typing-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
